# python-basic-practice

./: README.md  break&continue.py  condition.py  condition2.py  condition3.py  condition4.py  dictionary.py  dictionary2.py  function.py  in.py  in2.py  index.py  join&split.py  list1.py  list2.py  list_sort.py  loop.py  loop2.py  loop3.py  loop4.py  loop5.py  loop6.py  loop7.py  loop8.py  max&min&sum.py  pyproject.toml  recursion1.py  recursion2.py  recursion3.py  test.py
