[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Allen Chen <allen.chen@hiero7.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
autopep8 = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
